[package]
name = "async-electrum-client"
version = "0.1.0"
edition = "2018"
rust-verion = "1.48.0"

[dependencies]
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util"]}
tokio-util = { version = "0.7", features = ["codec"]}
slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_debug"] }
bitcoin = { version = "0.30", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_tuple = "0.5.0"
futures = "0.3.0"
